add odin inspector

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,13 @@ crashlytics-build.properties
 .idea/
 
 UserSettings/
+
+
+# Ignore the auto-generated AOT compatibility dll.
+/Assets/Plugins/Sirenix/Assemblies/AOT/*
+
+# Ignore all unpacked demos.
+/Assets/Plugins/Sirenix/Demos/*
+
+# But keep the demo packages themselves.
+!/Assets/Plugins/Sirenix/Demos/*.unitypackage 
